src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Campaign External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <label>Leads</label>
        <summaryFilterItems>
            <field>CampaignMember.LeadId</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NoLeads__c</fullName>
        <formula>NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NoLeads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>NoMoreLead</fullName>
        <active>false</active>
        <errorConditionFormula>Leads__c  &gt; 1</errorConditionFormula>
        <errorMessage>No More Leads</errorMessage>
    </validationRules>
</CustomObject>